修复p2一个 bug，添加 p3（未完成）

--- a/ife-2017/test.html
+++ b/ife-2017/test.html
@@ -7,6 +7,6 @@
     <title>IFE test</title>
 </head>
 <body>
-    <script src="./p2_test.js"></script>
+    <script src="./p3.js"></script>
 </body>
 </html>
