提交 p4 （未完成）

--- a/ife-2017/test.html
+++ b/ife-2017/test.html
@@ -7,6 +7,10 @@
     <title>IFE test</title>
 </head>
 <body>
-    <script src="./p3.js"></script>
+    <div id="app">
+        <p>姓名：{{user.name}}</p>
+        <p>年龄：{{user.age}}</p>
+    </div>
+    <script src="./p4.js"></script>
 </body>
 </html>
