--- a/ife-2017/test.html
+++ b/ife-2017/test.html
@@ -7,10 +7,7 @@
     <title>IFE test</title>
 </head>
 <body>
-    <div id="app">
-        <p>姓名：{{user.name}}</p>
-        <p>年龄：{{user.age}}</p>
-    </div>
+    <div id="app"></div>
     <script src="./p4.js"></script>
 </body>
 </html>
